<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:background="@drawable/background_color"
            android:id="@+id/add_group_layout">

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:paddingTop="16dp"
                android:id="@+id/add_group_description_layout">

            <ImageView
                    android:id="@+id/add_group_logo"
                    android:contentDescription="@string/group_image"
                    android:background="@drawable/grid_item_selector"
                    android:padding="5dp"
                    android:layout_width="105dp"
                    android:layout_height="105dp" >
            </ImageView>

            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                <EditText
                        android:id="@+id/add_group_name"
                        android:layout_height="wrap_content"
                        android:hint="@string/group_name"
                        android:paddingLeft="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center_vertical"

                        android:textColor="@android:color/black"
                        android:inputType="textCapWords"
                        android:layout_width="fill_parent"
                        android:focusable="true"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/header"
                android:text="@string/group_description"
                android:textSize="@dimen/header_text"
                android:gravity="center"
                android:background="@drawable/header"
                android:id="@+id/add_group_description_header"
                android:layout_below="@+id/add_group_description_layout"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <EditText
                android:inputType="textCapSentences"
                android:capitalize="sentences"
                android:lines="8"
                android:minLines="2"
                android:maxLines="10"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="12dp"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:scrollbars="vertical"
                android:focusable="true"
                android:hint="@string/group_description_hint"
                android:id="@+id/add_group_description"
                android:layout_below="@id/add_group_description_header"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/header"
                android:text="@string/group_rules"
                android:textSize="@dimen/header_text"
                android:gravity="center"
                android:background="@drawable/header"
                android:id="@+id/add_group_existing_rules"
                android:layout_below="@+id/add_group_description"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_group_existing_rules_list"
                android:layout_below="@+id/add_group_existing_rules"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/header"
                android:text="@string/add_new_rule"
                android:textSize="@dimen/header_text"
                android:gravity="center"
                android:background="@drawable/header"
                android:id="@+id/add_group_new_rule"
                android:layout_below="@+id/add_group_existing_rules_list"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <Spinner
                android:id="@+id/add_group_rule_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:spinnerMode="dialog"
                android:paddingLeft="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:entries="@array/rule_items"
                android:prompt="@string/rule_prompt"
                android:layout_below="@+id/add_group_new_rule"/>

        <EditText
                android:id="@+id/add_group_rule_name"
                android:layout_height="wrap_content"
                android:hint="@string/rule_name"
                android:paddingLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textColor="@android:color/black"
                android:inputType="textCapWords"
                android:layout_width="fill_parent"
                android:focusable="true"
                android:layout_below="@+id/add_group_rule_type" />

        <Spinner
                android:id="@+id/add_group_rule_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="10dp"
                android:spinnerMode="dialog"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:entries="@array/reason_items"
                android:prompt="@string/reason_prompt"
                android:layout_below="@+id/add_group_rule_name"/>

        <Button
                android:id="@+id/add_group_save_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_rule"
                android:layout_below="@+id/add_group_rule_reason"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <Button
                android:id="@+id/add_group_edit_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_rule"
                android:visibility="gone"
                android:layout_below="@+id/add_group_rule_reason"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <Button
                android:id="@+id/add_group_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_group"
                android:visibility="gone"
                android:layout_below="@+id/add_group_rule_reason"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <Button
                android:id="@+id/add_group_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave_group"
                android:visibility="gone"
                android:layout_below="@+id/add_group_rule_reason"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <Button
                android:id="@+id/add_group_save_group"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/save_group"
                android:layout_below="@+id/add_group_save_rule"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <Button
                android:id="@+id/add_group_save_group2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/save_group"
                android:visibility="gone"
                android:layout_below="@+id/add_group_edit_rule"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <Button
                android:id="@+id/add_group_edit_group"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_group"
                android:visibility="gone"
                android:layout_below="@+id/add_group_save_rule"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

        <Button
                android:id="@+id/add_group_edit_group2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_group"
                android:visibility="gone"
                android:layout_below="@+id/add_group_edit_rule"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>