<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_color"
            android:id="@+id/bad_product_layout">

        <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="280dp"
                android:id="@+id/bad_product_header"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true">


            <ImageView
                    android:layout_width="216dp"
                    android:layout_height="216dp"
                    android:id="@+id/bad_product_logo_background"
                    android:contentDescription="@string/product_logo_background"
                    android:layout_marginLeft="102dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/header_color"/>

            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/bad_product_logo"
                    android:contentDescription="@string/product_logo"
                    android:padding="5dp"
                    android:layout_marginLeft="110dp"
                    android:layout_centerVertical="true"
                    android:background="@android:color/white"
                    android:src="@drawable/mockup_pepsi"/>

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="90dp"
                    android:id="@+id/bad_status"
                    android:layout_marginLeft="32dp"
                    android:contentDescription="@string/product_status"
                    android:src="@drawable/cross"/>

            <TextView
                    android:id="@+id/bad_product_name"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/header_color"
                    android:gravity="center"
                    android:padding="2dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="102dp"
                    android:layout_below="@+id/bad_product_logo">
            </TextView>

        </RelativeLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/header"
                android:text="@string/produced_by"
                android:textSize="@dimen/header_text"
                android:gravity="center"
                android:background="@drawable/header"
                android:id="@+id/bad_produced_by"
                android:layout_below="@+id/bad_product_header"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:id="@+id/bad_company_logo"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/company_logo"
                android:src="@drawable/mockup_pepsico2"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_below="@+id/bad_produced_by"
                android:layout_centerHorizontal="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:id="@+id/bad_company_name"
                android:layout_below="@+id/bad_company_logo"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_centerHorizontal="true"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/header"
                android:text="@string/product_reasons"
                android:textSize="@dimen/header_text"
                android:gravity="center"
                android:background="@drawable/header"
                android:id="@+id/bad_reasons"
                android:layout_below="@+id/bad_company_name"
                android:layout_marginTop="19dp"
                android:layout_centerHorizontal="true"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bad_reasons_list"
                android:layout_below="@+id/bad_reasons"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/header"
                android:text="@string/product_ingredients"
                android:textSize="@dimen/header_text"
                android:gravity="center"
                android:background="@drawable/header"
                android:id="@+id/bad_ingredients"
                android:layout_below="@+id/bad_reasons_list"
                android:layout_centerHorizontal="true"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bad_ingredients_list"
                android:layout_below="@+id/bad_ingredients"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/header"
                android:text="@string/recommended_products"
                android:textSize="@dimen/header_text"
                android:gravity="center"
                android:background="@drawable/header"
                android:id="@+id/bad_recommended"
                android:layout_below="@+id/bad_ingredients_list"
                android:layout_centerHorizontal="true"/>

        <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/bad_recommended_list"
                android:layout_below="@+id/bad_recommended"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|left">

            <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/left"
                    android:id="@+id/bad_recommended_left"
                    android:contentDescription="@string/left_arrow"
                    android:layout_weight="1"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="150dp"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"

                          android:layout_marginBottom="6dp"
                          android:background="@drawable/header_color">

                <ImageView
                        android:id="@+id/bad_recommended_logo"
                        android:contentDescription="@string/item_image"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        android:layout_height="150dp" >
                </ImageView>

                <TextView
                        android:id="@+id/bad_recommended_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:textSize="@dimen/header_text" >
                </TextView>

            </LinearLayout>

            <ImageView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right"
                    android:id="@+id/bad_recommended_right"
                    android:contentDescription="@string/right_arrow"
                    android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>